@@ -1,5 +1,7 @@
 v4.1.9 (work in progress)
      * Remove lingering references to the old master branch.
+     * Add safeguard against rare FPE with what looks like an issue with the
+       Intel OneAPI compiler during integration of S(alpha,beta).
      * ...
 
 v4.1.8 2025-05-07
